--- a/admin/views/features/index.haml
+++ b/admin/views/features/index.haml
@@ -13,36 +13,37 @@
         %tr
           %th.first=mat(:feature, :id)
           %th=mat(:feature, :name)
-          %th=mat(:feature, :description)
-          %th=mat(:feature, :created)
+          -#%th(style='display: none;') =mat(:feature, :description)
+          - if current_account.is_admin?
+            %th=mat(:feature, :created)
           %th=mat(:feature, :category)
           %th=mat(:feature, :cost)
           %th=mat(:feature, :status)
-          %th=mat(:feature, :votes)
           - if current_account.is_admin?
+            %th=mat(:feature, :votes)
             %th=mat(:feature, :account_id)
             %th.last="&nbsp;"
           - else
-            %th.last=mat(:feature, :account_id)
+            %th.last=mat(:feature, :votes)
         -@features.each do |feature|
           - next if feature.status == "draft" && !current_account.is_admin?
-          %tr
-            %td.first=feature.id
-            %td=feature.name
-            %td=feature.description
-            %td=feature.created
-            %td=feature.category
-            %td=feature.cost
-            %td=feature.status
-            %td=feature.votes.count
+          %tr{:id => "vote"+feature.id.to_s, :title => feature.description, :style => tr_voted(feature.votes), :onclick => 'toggleVote(this);'}
+            %td.first.id=feature.id
+            %td.name=feature.name
             - if current_account.is_admin?
-              %td=feature.account_id
+              %td.created=feature.created
+            %td.category=feature.category
+            %td.cost=feature.cost
+            %td.status=feature.status
+            - if current_account.is_admin?
+              %td.votes=feature.votes.count
+              %td.account_id=feature.account_id
               %td.last
                 =button_to pat(:edit), url(:features, :edit, :id => feature.id), :method => :get, :class => :button_to
                 ="|"
                 =button_to pat(:delete), url(:features, :destroy, :id => feature.id), :method => :delete, :class => :button_to
             - else
-              %td.last=feature.account_id
+              %td.last.votes=feature.votes.count
       .actions-bar.wat-cf
         .actions="&nbsp;"
 
