--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -4,13 +4,14 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title Padrino Admin
     =stylesheet_link_tag :base, "themes/warehouse/style"
+    =javascript_include_tag "/javascripts/jquery-1.5.1.min.js", "http://cdn.jquerytools.org/1.2.5/tiny/jquery.tools.min.js", "/javascripts/scripts.js"
   %body
     #container
       #header
         %h1=link_to "vnc watuwnt", url(:base_index)
         #user-navigation
           %ul.wat-cf
-            %li=link_to pat(:profile), url(:accounts, :edit, :id => current_account.id)
+            -#%li=link_to pat(:profile), url(:accounts, :edit, :id => current_account.id)
             %li=link_to pat(:logout), url(:sessions, :destroy), :method => :delete
         #main-navigation
           %ul.wat-cf
