--- a/public/admin/stylesheets/base.css
+++ b/public/admin/stylesheets/base.css
@@ -92,3 +92,12 @@ ul.list li .item .avatar{float:left;margin:0 5px 5px 0;width:30px;height:30px;}
 #box .block .content{padding:10px 20px;}
 /* custom */
 .code{font-family: Courier, 'Courier New', monospace;color:#36393D;}
+.tooltip{
+	display: none;
+	background: transparent url(/admin/images/tooltip/black_arrow.png);
+	height: 70px;
+	width: 160px;
+	font-size: 12px;
+	padding: 25px;
+	color: #fff;
+}
