--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -28,5 +28,6 @@
                 Copyright &copy;
                 =Time.now.year
                 VivaKi - Powered by 
-                =link_to "Tiger Blood", "images/tiger-blood-energy-drink.jpg"
+                =link_to "Tiger ", "images/tiger-blood-energy-drink.jpg"
+                =link_to "Blood", "http://twitter.com/#!/search/%23tigerblood"
         #sidebar=yield_content :sidebar
