--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -17,7 +17,7 @@
           %ul.wat-cf
             -project_modules.each do |project_module|
               %li{:class => ("active" if request.path_info =~ /^#{project_module.path}/)}
-                =link_to project_module.human_name, project_module.path("/admin")
+                =link_to project_module.human_name, project_module.path("/")
       #wrapper.wat-cf
         .flash=[:error, :warning, :notice].map { |type| flash_tag(type, :class => "message #{type}") }.join
         #main
