polishing up UI and adding text for instructions on initial page

--- a/admin/views/base/_sidebar.haml
+++ b/admin/views/base/_sidebar.haml
@@ -12,4 +12,4 @@
 .block
   %h3 Links
   %ul.navigation
-    %li=link_to "Request New Feature", "http://docs.google.com/a/vivakinervecenter.com"
+    %li=link_to "Request New Feature", "https://spreadsheets0.google.com/a/vivakinervecenter.com/viewform?hl=en&hl=en&formkey=dFlJZmdkcmpSc1VLQW9ESzZrQk9oeXc6MQ#gid=0"
