--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -90,6 +90,7 @@ ul.list li .item .avatar{float:left;margin:0 5px 5px 0;width:30px;height:30px;}
 #box .block{margin-bottom:20px;}
 #box .block h2{padding:10px 15px;margin:0;}
 #box .block .content{padding:10px 20px;}
+
 /* custom */
 .code{font-family: Courier, 'Courier New', monospace;color:#36393D;}
 .tooltip{
@@ -100,4 +101,8 @@ ul.list li .item .avatar{float:left;margin:0 5px 5px 0;width:30px;height:30px;}
 	font-size: 12px;
 	padding: 25px;
 	color: #fff;
+}
+
+.inner li {
+	margin-left: 25px;
 }
